--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
     "@angular/common": "~8.2.9",
     "@angular/compiler": "~8.2.9",
     "@angular/core": "~8.2.9",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.9",
     "@angular/platform-browser": "~8.2.9",
     "@angular/platform-browser-dynamic": "~8.2.9",
     "@angular/router": "~8.2.9",
+    "angularfire2": "^5.2.3",
+    "chart.js": "^2.9.3",
+    "firebase": "^6.6.2",
     "ng-zorro-antd": "^8.5.0",
     "rxjs": "~6.4.0",
+    "ng2-charts": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
